--------------------------------------------------------------------------------
                  Pidgin Paranoia Plugin Change Log
--------------------------------------------------------------------------------
Version 0.4.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: gettext support added

Version 0.3.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: modular key management (first step)
 * Paranoia: key list uses move-to-front transform
 * Paranoia: A pop-up at the end and status messages while generating new keys
 * Paranoia: '/otp reload' command added to regenerate the key list
 * Pranopia: key generator live status feedback
 * Paranoia: enhanced session management: ACK message is sent on request
  - Compatible with 0.2 by accident :-)

Christian Wäckerlin:
 * libotp: Added CRC32 test to ensure that the messages are unmodified
  - This breaks compatibility with versions smaller than 0.2
  - Compatible with version 0.2, libotp aknowledges that 0.2 has no CRC32 and 
    does not complain that the message has changed
 * Code cleanup and minor bug fixes

Pascal Sachs:
 * Keygen: Changed I/O System from glibc to GIO
 * Keygen: Better performance and less CPU usage on key generation
 * Keygen: Security Improvement through new entropy pool system
 * Keygen: Entropy source check moved from libotp to keygen
 * Keygen: Added ability to generate multiple keys simultaneous
 * Keygen: Code cleanup and minor bug fixes

Version 0.2.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Check libpurple and glib minor version number in configure
 * Cleaned and enhanced the make system
 * Paranoia: Support for multiple key files per conversation
 * Paranoia: Use the new libotp api (set/get and config)
 * Paranoia: Key settings are resetted if a buddy goes offline